# ml_uni_homework_rust

./: Cargo.toml
HW01/ndarray/: ndarray_task_1.rs  ndarray_task_10.rs  ndarray_task_2.rs  ndarray_task_3.rs  ndarray_task_4.rs  ndarray_task_5.rs  ndarray_task_6.rs  ndarray_task_7.rs  ndarray_task_8.rs  ndarray_task_9.rs
HW01/polars/: polars.ipynb  test.rs
