[package]
name = "ml_uni_homework_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3.2"
ndarray = "0.16.1"
num = "0.4.3"
polars = { version = "0.46.0", features = ["lazy", "describe"] }


[[bin]]
name = "ndarray_task_1"
path = "HW01/ndarray/ndarray_task_1.rs"

[[bin]]
name = "ndarray_task_2"
path = "HW01/ndarray/ndarray_task_2.rs"

[[bin]]
name = "ndarray_task_3"
path = "HW01/ndarray/ndarray_task_3.rs"

[[bin]]
name = "ndarray_task_4"
path = "HW01/ndarray/ndarray_task_4.rs"

[[bin]]
name = "ndarray_task_5"
path = "HW01/ndarray/ndarray_task_5.rs"

[[bin]]
name = "ndarray_task_6"
path = "HW01/ndarray/ndarray_task_6.rs"

[[bin]]
name = "ndarray_task_7"
path = "HW01/ndarray/ndarray_task_7.rs"

[[bin]]
name = "ndarray_task_8"
path = "HW01/ndarray/ndarray_task_8.rs"

[[bin]]
name = "ndarray_task_9"
path = "HW01/ndarray/ndarray_task_9.rs"

[[bin]]
name = "ndarray_task_10"
path = "HW01/ndarray/ndarray_task_10.rs"

[[bin]]
name = "a"
path = "HW01/polars/a.rs"